// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component MenuDrawer should render CRICOS footer 1`] = `null`;

exports[`Component MenuDrawer should render empty drawer 1`] = `
<WithStyles(Drawer)
  anchor="left"
  classes={
    Object {
      "docked": undefined,
      "paper": undefined,
      "paperAnchorDockedLeft": undefined,
    }
  }
  onClose={[MockFunction]}
  open={false}
  variant="temporary"
/>
`;

exports[`Component MenuDrawer should render opened drawer with menus, divider 1`] = `
<WithStyles(Drawer)
  anchor="left"
  classes={
    Object {
      "docked": undefined,
      "paper": undefined,
      "paperAnchorDockedLeft": undefined,
    }
  }
  onClose={[MockFunction]}
  open={true}
  variant="temporary"
>
  <WithStyles(Grid)
    style={
      Object {
        "flexGrow": 1,
      }
    }
  >
    <WithStyles(Grid)
      alignContent="center"
      alignItems="center"
      classes={
        Object {
          "container": undefined,
        }
      }
      container={true}
      spacing={0}
      wrap="nowrap"
    >
      <WithStyles(Grid)
        item={true}
        sm={12}
        xs={10}
        zeroMinWidth={true}
      />
      <Hidden
        implementation="js"
        lgDown={false}
        lgUp={false}
        mdDown={false}
        mdUp={false}
        smDown={false}
        smUp={true}
        xlDown={false}
        xlUp={false}
        xsDown={false}
        xsUp={false}
      >
        <WithStyles(Grid)
          item={true}
          xs={2}
        >
          <WithStyles(IconButton)
            aria-label="Close menu"
            onClick={[MockFunction]}
          >
            <pure(KeyboardArrowLeft) />
          </WithStyles(IconButton)>
        </WithStyles(Grid)>
      </Hidden>
    </WithStyles(Grid)>
    <List
      id="mainMenu"
      tabIndex={-1}
    >
      <span
        className="menu-item-container"
        key="menu_item_0"
      >
        <ListItem
          autoGenerateNestedIndicator={true}
          containerElement="span"
          disableKeyboardFocus={false}
          disabled={false}
          initiallyOpen={false}
          insetChildren={false}
          leftIcon={null}
          nestedItems={Array []}
          nestedLevel={0}
          onClick={[Function]}
          onKeyboardFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onNestedListToggle={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          open={null}
          primaryText="Primary text 0"
          primaryTogglesNestedList={false}
          secondaryText="secondary text 0"
          secondaryTextLines={1}
        />
      </span>
      <Divider
        inset={false}
        key="menu_item_1"
      />
      <span
        className="menu-item-container"
        key="menu_item_2"
      >
        <ListItem
          autoGenerateNestedIndicator={true}
          containerElement="span"
          disableKeyboardFocus={false}
          disabled={false}
          initiallyOpen={false}
          insetChildren={false}
          leftIcon={null}
          nestedItems={Array []}
          nestedLevel={0}
          onClick={[Function]}
          onKeyboardFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onNestedListToggle={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          open={null}
          primaryText="Primary text 1"
          primaryTogglesNestedList={false}
          secondaryText="secondary text 1"
          secondaryTextLines={1}
        />
      </span>
    </List>
    <div
      id="afterMenuDrawer"
      tabIndex={-1}
    />
    <div>
      CRICOS Provider No: 
      <ExternalLink
        className=""
        href="http://www.uq.edu.au/about/cricos-link"
        openInNewIcon={false}
        rel="noopener noreferrer"
        target="_blank"
        title="CRICOS Provider No: "
      >
        00025B
      </ExternalLink>
    </div>
  </WithStyles(Grid)>
</WithStyles(Drawer)>
`;

exports[`Component MenuDrawer should render opened drawer with menus, divider and skip nav button 1`] = `
<WithStyles(Drawer)
  anchor="left"
  classes={
    Object {
      "docked": undefined,
      "paper": undefined,
      "paperAnchorDockedLeft": undefined,
    }
  }
  onClose={[MockFunction]}
  open={true}
  variant="permanent"
>
  <WithStyles(Grid)
    style={
      Object {
        "flexGrow": 1,
      }
    }
  >
    <WithStyles(Grid)
      alignContent="center"
      alignItems="center"
      classes={
        Object {
          "container": undefined,
        }
      }
      container={true}
      spacing={0}
      wrap="nowrap"
    >
      <WithStyles(Grid)
        item={true}
        sm={12}
        xs={10}
        zeroMinWidth={true}
      />
      <Hidden
        implementation="js"
        lgDown={false}
        lgUp={false}
        mdDown={false}
        mdUp={false}
        smDown={false}
        smUp={true}
        xlDown={false}
        xlUp={false}
        xsDown={false}
        xsUp={false}
      >
        <WithStyles(Grid)
          item={true}
          xs={2}
        >
          <WithStyles(IconButton)
            aria-label="Close menu"
            onClick={[MockFunction]}
          >
            <pure(KeyboardArrowLeft) />
          </WithStyles(IconButton)>
        </WithStyles(Grid)>
      </Hidden>
    </WithStyles(Grid)>
    <List
      id="mainMenu"
      tabIndex={-1}
    >
      <div
        aria-label="Skip navigation"
        id="skipNav"
        onClick={[Function]}
        onKeyPress={[Function]}
        tabIndex={1}
        type="button"
      >
        <WithStyles(Button)
          className="skipNavButton"
          color="primary"
          onClick={[Function]}
          tabIndex={-1}
          variant="contained"
        >
          Skip navigation
        </WithStyles(Button)>
      </div>
      <span
        className="menu-item-container"
        key="menu_item_0"
      >
        <ListItem
          autoGenerateNestedIndicator={true}
          containerElement="span"
          disableKeyboardFocus={false}
          disabled={false}
          initiallyOpen={false}
          insetChildren={false}
          leftIcon={null}
          nestedItems={Array []}
          nestedLevel={0}
          onClick={[Function]}
          onKeyboardFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onNestedListToggle={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          open={null}
          primaryText="Primary text 0"
          primaryTogglesNestedList={false}
          secondaryText="secondary text 0"
          secondaryTextLines={1}
        />
      </span>
      <Divider
        inset={false}
        key="menu_item_1"
      />
      <span
        className="menu-item-container"
        key="menu_item_2"
      >
        <ListItem
          autoGenerateNestedIndicator={true}
          containerElement="span"
          disableKeyboardFocus={false}
          disabled={false}
          initiallyOpen={false}
          insetChildren={false}
          leftIcon={null}
          nestedItems={Array []}
          nestedLevel={0}
          onClick={[Function]}
          onKeyboardFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onNestedListToggle={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          open={null}
          primaryText="Primary text 1"
          primaryTogglesNestedList={false}
          secondaryText="secondary text 1"
          secondaryTextLines={1}
        />
      </span>
    </List>
    <div
      id="afterMenuDrawer"
      tabIndex={-1}
    />
    <div>
      CRICOS Provider No: 
      <ExternalLink
        className=""
        href="http://www.uq.edu.au/about/cricos-link"
        openInNewIcon={false}
        rel="noopener noreferrer"
        target="_blank"
        title="CRICOS Provider No: "
      >
        00025B
      </ExternalLink>
    </div>
  </WithStyles(Grid)>
</WithStyles(Drawer)>
`;

exports[`Component MenuDrawer should render opened drawer with menus, divider and skip nav button 2`] = `
<WithStyles(Drawer)
  anchor="left"
  classes={
    Object {
      "docked": undefined,
      "paper": undefined,
      "paperAnchorDockedLeft": undefined,
    }
  }
  onClose={[MockFunction]}
  open={true}
  variant="permanent"
>
  <WithStyles(Grid)
    style={
      Object {
        "flexGrow": 1,
      }
    }
  >
    <WithStyles(Grid)
      alignContent="center"
      alignItems="center"
      classes={
        Object {
          "container": undefined,
        }
      }
      container={true}
      spacing={0}
      wrap="nowrap"
    >
      <WithStyles(Grid)
        item={true}
        sm={12}
        xs={10}
        zeroMinWidth={true}
      />
      <Hidden
        implementation="js"
        lgDown={false}
        lgUp={false}
        mdDown={false}
        mdUp={false}
        smDown={false}
        smUp={true}
        xlDown={false}
        xlUp={false}
        xsDown={false}
        xsUp={false}
      >
        <WithStyles(Grid)
          item={true}
          xs={2}
        >
          <WithStyles(IconButton)
            aria-label="Close menu"
            onClick={[MockFunction]}
          >
            <pure(KeyboardArrowLeft) />
          </WithStyles(IconButton)>
        </WithStyles(Grid)>
      </Hidden>
    </WithStyles(Grid)>
    <List
      id="mainMenu"
      tabIndex={-1}
    >
      <div
        aria-label="Skip navigation"
        id="skipNav"
        onClick={[Function]}
        onKeyPress={[Function]}
        tabIndex={1}
        type="button"
      >
        <WithStyles(Button)
          className="skipNavButton"
          color="primary"
          onClick={[Function]}
          tabIndex={-1}
          variant="contained"
        >
          Skip navigation
        </WithStyles(Button)>
      </div>
      <span
        className="menu-item-container"
        key="menu_item_0"
      >
        <ListItem
          autoGenerateNestedIndicator={true}
          containerElement="span"
          disableKeyboardFocus={false}
          disabled={false}
          initiallyOpen={false}
          insetChildren={false}
          leftIcon={null}
          nestedItems={Array []}
          nestedLevel={0}
          onClick={[Function]}
          onKeyboardFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onNestedListToggle={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          open={null}
          primaryText="Primary text 0"
          primaryTogglesNestedList={false}
          secondaryText="secondary text 0"
          secondaryTextLines={1}
        />
      </span>
      <Divider
        inset={false}
        key="menu_item_1"
      />
      <span
        className="menu-item-container"
        key="menu_item_2"
      >
        <ListItem
          autoGenerateNestedIndicator={true}
          containerElement="span"
          disableKeyboardFocus={false}
          disabled={false}
          initiallyOpen={false}
          insetChildren={false}
          leftIcon={null}
          nestedItems={Array []}
          nestedLevel={0}
          onClick={[Function]}
          onKeyboardFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onNestedListToggle={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          open={null}
          primaryText="Primary text 1"
          primaryTogglesNestedList={false}
          secondaryText="secondary text 1"
          secondaryTextLines={1}
        />
      </span>
    </List>
    <div
      id="afterMenuDrawer"
      tabIndex={-1}
    />
    <div>
      CRICOS Provider No: 
      <ExternalLink
        className=""
        href="http://www.uq.edu.au/about/cricos-link"
        openInNewIcon={false}
        rel="noopener noreferrer"
        target="_blank"
        title="CRICOS Provider No: "
      >
        00025B
      </ExternalLink>
    </div>
  </WithStyles(Grid)>
</WithStyles(Drawer)>
`;
